force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Sell_Price_Per_Quantity__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Sell_Price_Per_Quantity__c</fullName>
    <label>Sell Price Per Quantity</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>