force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Shared_Cost_Per_Night__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Shared_Cost_Per_Night__c</fullName>
    <label>Shared Cost Per Night</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>