force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Special_Offer__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Special_Offer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Only required if Item Category is Special Offer.</inlineHelpText>
    <label>Special Offer</label>
    <referenceTo>sugati__Special_Offer__c</referenceTo>
    <relationshipLabel>Supplier Costs</relationshipLabel>
    <relationshipName>Supplier_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>