force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Supplier_Booking__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Supplier_Booking__c</fullName>
    <label>Supplier Booking</label>
    <referenceTo>sugati__Supplier_Booking__c</referenceTo>
    <relationshipLabel>Supplier Costs</relationshipLabel>
    <relationshipName>Supplier_Costs</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>