force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Supplier_Cost_Payment__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Supplier_Cost_Payment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier Cost Payment</label>
    <referenceTo>sugati__Supplier_Cost_Payment__c</referenceTo>
    <relationshipLabel>Supplier Costs</relationshipLabel>
    <relationshipName>Supplier_Costs</relationshipName>
    <type>Lookup</type>
</CustomField>