force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Supplier_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Supplier_Id__c</fullName>
    <formula>sugati__SC_Supplier_Booking__r.sugati__SB_Supplier__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Id</label>
    <type>Text</type>
</CustomField>