force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Supplier_Name__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Supplier_Name__c</fullName>
    <formula>sugati__SC_Supplier_Booking__r.sugati__SB_Supplier__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Supplier Name</label>
    <type>Text</type>
</CustomField>