force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Total_Client_Group_Cost__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Total_Client_Group_Cost__c</fullName>
    <label>Total Client Group Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>