force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Total_Client_Group_Cost_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Total_Client_Group_Cost_Overwrite__c</fullName>
    <inlineHelpText>If there is a value in this field then it will supersede the Total Client Group Cost. It&apos;s is primarily used in the Supplier Cost &amp; Payment records.</inlineHelpText>
    <label>Total Client Group Cost Overwrite</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>