force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Total_Cost_to_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Total_Cost_to_Supplier__c</fullName>
    <label>Total Cost to Supplier</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>