force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Total_Net_CostSC__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Total_Net_CostSC__c</fullName>
    <label>Total Net Cost Selling Currency</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>