force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_Tour_Extra_Cancellation_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_Tour_Extra_Cancellation_Amount__c</fullName>
    <label>Tour Extra Cancellation Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>