force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_VAT_Manual__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_VAT_Manual__c</fullName>
    <label>VAT Value(Manual)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>