force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_VAT_Note__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_VAT_Note__c</fullName>
    <label>VAT Note</label>
    <length>255</length>
    <type>Text</type>
</CustomField>