force-app/main/default/objects/sugati__Supplier_Cost__c/fields/sugati__SC_VAT_Value__c.field-meta.xml
<CustomField>
    <fullName>sugati__SC_VAT_Value__c</fullName>
    <formula>IF(TEXT(sugati__SC_VAT_Type__c)==&apos;Agent Commission&apos;,sugati__SC_Agent_Commission_Value__c * sugati__SC_VAT__c,IF(TEXT(sugati__SC_VAT_Type__c)==&apos;Manual Overwrite&apos;,sugati__SC_VAT_Manual__c,sugati__SC_Commission_Value__c* sugati__SC_VAT__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>VAT Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>