force-app/main/default/objects/sugati__Supplier_Cost__c/recordTypes/sugati__Mark_Up_Adjust.recordType-meta.xml
<RecordType>
    <fullName>sugati__Mark_Up_Adjust</fullName>
    <active>true</active>
    <label>Mark Up Adjust</label>
</RecordType>