force-app/main/default/objects/sugati__Supplier_Cost__c/recordTypes/sugati__Selling_Price_Adjust.recordType-meta.xml
<RecordType>
    <fullName>sugati__Selling_Price_Adjust</fullName>
    <active>true</active>
    <description>Adjusting Selling Price</description>
    <label>Selling Price Adjust</label>
</RecordType>